# pr2_resources_management

./: README.md
mocap_filter_head_manager/: CMakeLists.txt  package.xml
mocap_filter_head_manager/include/mocap_filter_head_manager/: mocap_filter.hpp
mocap_filter_head_manager/launch/: mocap_pr2_human_hand.launch  mocap_pr2_human_head.launch
mocap_filter_head_manager/src/: mocap_filter.cpp
pr2_head_manager/: CMakeLists.txt  package.xml
pr2_head_manager/include/pr2_head_manager/: ArtificialLife.h  pr2_head_manager.h
pr2_head_manager/src/: ArtificialLife.cpp  main.cpp  main_synchronised.cpp  pr2_head_manager.cpp
pr2_head_manager/test/: main.test  test.cpp
pr2_head_manager_msgs/: CMakeLists.txt  package.xml
pr2_head_manager_msgs/msg/: StateMachine.msg
pr2_resources_management/: CMakeLists.txt  package.xml
proximity_sensing/: CMakeLists.txt  package.xml
proximity_sensing/src/: proximity_sensing.cpp
