<?xml version="1.0"?>
<package format="2">
  <name>mocap_filter_head_manager</name>
  <version>0.0.0</version>
  <description>Transforms and filters a body pose from optitrack to a stamped pose with priority to be used in the head manager.</description>

  <maintainer email="gsarthou@laas.fr">gsarthou</maintainer>
  <author email="gbuisan@laas.fr">gbuisan</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>optitrack_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>resource_management_msgs</build_depend>
  <build_depend>pr2_head_manager_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>optitrack_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>pr2_head_manager_msgs</build_export_depend>
  <build_export_depend>resource_management_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>optitrack_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pr2_head_manager_msgs</exec_depend>
  <exec_depend>resource_management_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

</package>
