<package format="2">
  <name>pr2_resources_management</name>
  <version>1.0.0</version>
  <description>
    Manages the physical resources of the PR2 robot
  </description>
  <maintainer email="gbuisan@laas.fr">Guilhem Buisan</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <export>
   <metapackage />
  </export>

  <exec_depend>pr2_arm_manager_msgs</exec_depend>
  <exec_depend>pr2_arm_manager</exec_depend>
  <exec_depend>proximity_sensing</exec_depend>
  <exec_depend>mocap_filter_head_manager</exec_depend>
</package>
